# DataForge

./: .gitignore  AGENTS.md  main.py  pyproject.toml  split_dataset.py
docs/: architecture.md
docs/ui-sample/: index.html
myproject.egg-info/: PKG-INFO  SOURCES.txt
scripts/: create_augmented_dataset.py  extract_target.py  extract_yolo_class0_dataset.py  formatConversion.py  gen_negative_samples.py  visualize_yolo_samples.py
src/serve/: DataAugmentationToolkit.py  YOLOClassExtractor.py  data_cleaner.py  dataset_network_collector.py
src/serve/formatConversion/: BaseToYOLO.py  CocoToYOLO.py  VocToYOLO.py  YoloToYOLO.py
src/views/: L1_batch_copy_images_with_hbb_dialog.py  L1_batch_extract_and_composite_dialog.py  L1_bing_download_batch_dialog.py  L1_bing_download_dialog.py  L1_copy_image_with_hbb_dialog.py  L1_extract_and_composite_dialog.py  L1_pexels_download_batch_dialog.py  L1_pexels_download_dialog.py  L1_yolo_class_extract_dialog.py  L2_toolbar.py  __init__.py  styles.py
test/: manual_toolbar.py  manual_view_dialogs.py  test_dataset_network_collector.py  test_detect.py
